# ObjectDetection

./: .gitignore
NNPACK-darknet/: .gitignore  configure.py
NNPACK-darknet/include/: nnpack.h
NNPACK-darknet/jni/: Application.mk
ResultModel/: Smallyolo3.cfg  models.txt
android/: nndar.jks
android/androidDetect/: build.gradle  threads_report.txt
android/androidDetect/gradleBuild/android-profile/: profile-2017-12-07-09-39-56-131.rawproto  profile-2017-12-07-09-40-18-209.rawproto  profile-2017-12-07-09-40-20-367.rawproto  profile-2017-12-07-09-40-34-735.rawproto  profile-2017-12-07-09-40-55-192.rawproto  profile-2017-12-07-09-42-18-697.rawproto  profile-2017-12-07-09-43-54-925.rawproto  profile-2017-12-07-09-44-56-347.rawproto  profile-2017-12-07-09-45-44-341.rawproto  profile-2017-12-07-09-46-50-694.rawproto  profile-2017-12-07-09-49-35-115.rawproto  profile-2017-12-07-09-49-55-486.rawproto  profile-2017-12-07-09-50-18-571.rawproto  profile-2017-12-07-09-52-26-303.rawproto  profile-2017-12-07-09-55-16-236.rawproto  profile-2017-12-07-09-57-14-994.rawproto  profile-2017-12-07-09-57-53-115.rawproto  profile-2017-12-07-09-58-14-718.rawproto  profile-2017-12-07-09-59-44-290.rawproto  profile-2017-12-07-10-00-14-686.rawproto  profile-2017-12-07-10-03-06-444.rawproto  profile-2017-12-07-10-07-05-169.rawproto  profile-2017-12-07-10-10-59-754.rawproto  profile-2017-12-07-10-12-52-397.rawproto  profile-2017-12-07-10-14-38-464.rawproto  profile-2017-12-07-10-15-14-772.rawproto  profile-2017-12-07-10-22-47-401.rawproto  profile-2017-12-07-10-23-27-182.rawproto  profile-2017-12-07-10-25-21-415.rawproto  profile-2017-12-07-10-27-33-450.rawproto  profile-2017-12-07-10-29-24-482.rawproto  profile-2017-12-07-10-33-13-223.rawproto  profile-2017-12-07-10-34-29-454.rawproto  profile-2017-12-07-10-35-00-142.rawproto  profile-2017-12-07-10-37-20-697.rawproto  profile-2017-12-07-10-37-45-875.rawproto  profile-2017-12-07-10-41-05-652.rawproto  (+82 more)
android/androidDetect/jni/: Android.mk  Application.mk  CMakeLists.txt  android_fs.h  region_layer.cpp  squeezencnn_jni.cpp
android/android_fs/: android_fs.c  android_fs.h
android/ncnn-AS/app/: CMakeLists.txt
android/ncnn-AS/app/src/main/assets/: size.txt
android/ncnn-AS/app/src/main/java/com/tencent/squeezencnn/: MainActivity.java  SqueezeNcnn.java
android/ncnn-AS/app/src/main/jni/: region_layer.cpp  squeezencnn_jni.cpp
android/nnpack_darknet/app/: CMakeLists.txt
android/nnpack_darknet/app/src/androidTest/java/com/example/lin/nnpack_darknet/: ExampleInstrumentedTest.java
android/nnpack_darknet/app/src/main/: AndroidManifest.xml
android/nnpack_darknet/app/src/main/assets/: Smallyolo3.cfg  coco.data  mobilenet_yolo.cfg
android/nnpack_darknet/app/src/main/cpp/: native-lib.c  ndtest.c  ndtest.h
android/nnpack_darknet/app/src/main/java/com/example/lin/nnpack_darknet/: MainActivity.java
android/nnpack_darknet/app/src/main/res/layout/: activity_main.xml
android/nnpack_darknet/app/src/main/res/values/: strings.xml
android/nnpack_darknet/app/src/test/java/com/example/lin/nnpack_darknet/: ExampleUnitTest.java
cmake/: nnpack.cmake
darknet/: .gitignore  Makefile
darknet/include/: darknet.h
darknet/src/: convolutional_layer.c  depthwise_conv2d_neon.cpp  depthwise_conv2d_neon.h  depthwise_convolutional_layer.c  depthwise_convolutional_layer.h  dw.h  im2col.h  parser.c  stb_image.h
(+28 files in other folders)
